fix(improvements): final improvements
